data/derived/comb/progs/unify/prog8357.ml.out
Characters 95-99:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type int -> int -> int
       but an expression was expected of type int -> int
       Type int -> int is not compatible with type int 
